community/cacti: security upgrade to 1.2.8 (CVE-2019-17358)
fixes #11035

--- a/community/cacti/APKBUILD
+++ b/community/cacti/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Valery Kartel <valery.kartel@gmail.com>
 # Maintainer: Jeff Bilyk <jbilyk@gmail.com>
 pkgname=cacti
-pkgver=1.2.3
+pkgver=1.2.8
 pkgrel=0
 pkgdesc="The complete rrdtool-based graphing solution"
 url="https://www.cacti.net"
@@ -19,6 +19,10 @@ source="https://www.cacti.net/downloads/$pkgname-$pkgver.tar.gz
 	$pkgname.nginx.conf
 	$pkgname.php-fpm.conf
 	"
+
+# secfixes:
+#   1.2.8-r0:
+#     - CVE-2019-17358
 
 package() {
 	mkdir -p "$pkgdir"/usr/share/webapps/$pkgname \
@@ -131,7 +135,7 @@ _php() {
 		"$subpkgdir"/etc/$php/php-fpm.d/$pkgname.conf
 }
 
-sha512sums="195d71a6eb08770211c30985ea3b96e2c4f84d91f16617a15e84fab0959a91f1f7923462ea931724a60580757662e01b335490f563d50e6e938c313dcf2044d0  cacti-1.2.3.tar.gz
+sha512sums="e24d9de47a06c1741c7bcfe5c5f68a5a0f0cc2eb859fc930ced28f797f84ad537ff1a0a703dc8c26735cc4b54ba09699e33a30ac666e1f8ec2ec26ae4ceccde3  cacti-1.2.8.tar.gz
 70f47dbbca76489fc3a84452ee8065f9571ee627b3e346cd3c866501d723a609372c4fbd7e53c4bdcdb22439d876d78847f8902dfa43f3f66b2329639e795ab9  cacti.crontab
 9b3fe765c6196c0e4988efaa7236d8a8b945725548371b4a0e2a371de374c9577a908d58dcef5a4e59e089ca923cfeb7c5ddea9ee983a5115239052cf9b8ab59  cacti.nginx.conf
 056358fc69752fb5129729db91a22d06c97ca452068017ccfe0ede8f2bf42f62e5072415c7db2eb5b9346d6bc54092bc147044e40b2156d8037dfee4a7e55e5b  cacti.php-fpm.conf"
