--- a/main/libxslt/APKBUILD
+++ b/main/libxslt/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libxslt
 pkgver=1.1.33
-pkgrel=2
+pkgrel=3
 pkgdesc="XML stylesheet transformation library"
 url="http://xmlsoft.org/XSLT/"
 arch="all"
@@ -12,10 +12,15 @@ subpackages="$pkgname-dev $pkgname-doc py2-$pkgname:py2"
 source="http://xmlsoft.org/sources/$pkgname-$pkgver.tar.gz
 	CVE-2019-11068.patch
 	CVE-2019-18197.patch
+	CVE-2019-13117.patch
+	CVE-2019-13118.patch
 	"
 builddir="$srcdir/$pkgname-$pkgver"
 
 # secfixes:
+#   1.1.33-r3:
+#     - CVE-2019-13117
+#     - CVE-2019-13118
 #   1.1.33-r2:
 #     - CVE-2019-18197
 #   1.1.33-r1:
@@ -51,4 +56,6 @@ py2() {
 
 sha512sums="ebbe438a38bf6355950167d3b580edc22baa46a77068c18c42445c1c9c716d42bed3b30c5cd5bec359ab32d03843224dae458e9e32dc61693e7cf4bab23536e0  libxslt-1.1.33.tar.gz
 9a97c5038809aaf64cb4eb7d67b95acc4b62236d7613a5f753e2a0f4c9e707c22cd07bda2e518d3f36a40b9ed5aa93496b743998c7adadb84ca147e045e35948  CVE-2019-11068.patch
-ec0a7cd35f9078a3939ef6c695f183d9a0da5dd837d0a7f586b89a07c0c0782384501e4c1532b4d9ee7e94e717c37179f470bae59923d0074b309f09b5bf18fa  CVE-2019-18197.patch"
+ec0a7cd35f9078a3939ef6c695f183d9a0da5dd837d0a7f586b89a07c0c0782384501e4c1532b4d9ee7e94e717c37179f470bae59923d0074b309f09b5bf18fa  CVE-2019-18197.patch
+da6f4ddb5c698d2bfd03b7ee8d96001223759a142532e0a8cb77f66744575dcc02ecd0da5ce038b744e740f350060b73c596b9919df331d230d7c4d88a2b912a  CVE-2019-13117.patch
+0e8912db00e3eefbcb9ee6494aff769cd0764b2e05741ec381ca8b7f72ef3cd4d6125acf086cf79c04ebdbd5a4eebc18815fd7e42653fdbcc7c0e079a3da6482  CVE-2019-13118.patch"
