main/libssh: security fix for CVE-2019-14889
fixes #11042

--- a/main/libssh/APKBUILD
+++ b/main/libssh/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libssh
 pkgver=0.7.6
-pkgrel=0
+pkgrel=1
 pkgdesc="Library for accessing ssh client services through C libraries"
 url="http://www.libssh.org/"
 arch="all"
@@ -11,10 +11,14 @@ makedepends="zlib-dev libressl-dev cmake doxygen"
 subpackages="$pkgname-dev"
 options="!check"
 source="https://www.libssh.org/files/0.7/libssh-$pkgver.tar.xz
-	fix-includes.patch"
+	fix-includes.patch
+	CVE-2019-14889.patch
+	"
 builddir="$srcdir"/$pkgname-$pkgver
 
 # secfixes:
+#   0.7.6-r1:
+#   - CVE-2019-14889
 #   0.7.6-r0:
 #   - CVE-2018-10933
 
@@ -33,4 +37,5 @@ package() {
 }
 
 sha512sums="2a01402b5a9fab9ecc29200544ed45d3f2c40871ed1c8241ca793f8dc7fdb3ad2150f6a522c4321affa9b8778e280dc7ed10f76adfc4a73f0751ae735a42f56c  libssh-0.7.6.tar.xz
-055a8f6b97c65384a5a3ab8fe00c69d94cc30092fe926093dbbc122ce301fbe9d76127aa07b5e6107d7fa9dd2aad6b165fa0958b56520253b5d64428ff42a318  fix-includes.patch"
+055a8f6b97c65384a5a3ab8fe00c69d94cc30092fe926093dbbc122ce301fbe9d76127aa07b5e6107d7fa9dd2aad6b165fa0958b56520253b5d64428ff42a318  fix-includes.patch
+ed832fd00cb1ccae94e4b9e6771d92822dd1ef0e3fcc4649fab04dcde9f959909b7564fe1533e48eb4d016d3fef2dd711e1b9be5bda286545bd18bb81ae9cb6a  CVE-2019-14889.patch"
