--- a/main/py-django/APKBUILD
+++ b/main/py-django/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=py-django
 _pkgname=Django
-pkgver=1.11.23
+pkgver=1.11.27
 pkgrel=0
 pkgdesc="A high-level Python Web framework"
 url="http://djangoproject.com/"
@@ -16,6 +16,8 @@ source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname
 builddir="$srcdir"/$_pkgname-$pkgver
 
 # secfixes:
+#   1.11.27-r0:
+#     - CVE-2019-19844
 #   1.11.23-r0:
 #     - CVE-2019-14232
 #     - CVE-2019-14233
@@ -93,4 +95,4 @@ _py() {
 	done
 }
 
-sha512sums="c4c5d82e4ecf1a100637ac32eafd3fb0d7690ba5c0cb884846f31c434c0cb1282d94149e031c577d676570f3b331c2a320d58f34f40ac02deae089c4b61c65ea  Django-1.11.23.tar.gz"
+sha512sums="02370bc69d715fbd0d0460e801840331670f7348767040035d80d5e881eae90259dfa4b6406af37d827361691aca464bc4d556e525c32a94413528d0593fdf09  Django-1.11.27.tar.gz"
