community/opensc: security upgrade to 0.20.0
- CVE-2019-6502
- CVE-2019-15946
- CVE-2019-15945
- CVE-2019-19480
- CVE-2019-19481
- CVE-2019-19479

fixes #11095

--- a/community/opensc/APKBUILD
+++ b/community/opensc/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=opensc
 _realname=OpenSC
-pkgver=0.19.0
-pkgrel=3
+pkgver=0.20.0
+pkgrel=0
 pkgdesc="Open source smart card tools and middleware"
 url="https://github.com/OpenSC/OpenSC"
 arch="all"
@@ -14,13 +14,18 @@ makedepends="$depends_dev automake autoconf m4 gettext libtool"
 install=""
 subpackages="$pkgname-dev $pkgname-doc"
 source="$_realname-${pkgver}.tar.gz::https://github.com/OpenSC/OpenSC/archive/${pkgver}.tar.gz
-	fix-overlapping-memcpy.patch
-	opensc-fix-format-overflow-werror.patch
 	"
 
 builddir="$srcdir/$_realname-$pkgver"
 
 # secfixes:
+#   0.20.0-r0:
+#     - CVE-2019-6502
+#     - CVE-2019-15945
+#     - CVE-2019-15946
+#     - CVE-2019-19479
+#     - CVE-2019-19480
+#     - CVE-2019-19481
 #   0.19.0-r0:
 #     - CVE-2018-16391
 #     - CVE-2018-16392
@@ -62,6 +67,4 @@ package() {
 		"$pkgdir/etc/opensc.conf"
 }
 
-sha512sums="a54161b72e6ecea9d61d8bdf0fe0dbd0f97dd8fff0ce6ce344442d9dd9218779851054f8a9049c95c4276e69d3ab96afd0906ebb3278739c8f8e32ad3dbf2d4b  OpenSC-0.19.0.tar.gz
-db96b06131c9a49245d9b1f23acb37ca29e2826eeec44462435a90daf8a247d498f517a08350fb786d8b43ac6ba139f11e3a6fdb3424f529210ec7f087116135  fix-overlapping-memcpy.patch
-cba98571f3f3cc132d28f0c4957bc4bc05689eb24af9a09630e750c8bb1b36c1abd080c8b543bf21c511860214f9763219c0da9e7635c0cecc173a8fe64c745c  opensc-fix-format-overflow-werror.patch"
+sha512sums="1360ee35f579cbeecf368777bb60d6c23ec2a80a2983328ea2c193530cc9b101a807ff1e2982ad34bfcc2bae2c867feecf300b6229d15057e796bd31ecffb02d  OpenSC-0.20.0.tar.gz"
