main/xen: security fixes
- CVE-2019-18425 XSA-298
- CVE-2019-18421 XSA-299
- CVE-2019-18423 XSA-301
- CVE-2019-18424 XSA-302
- CVE-2019-18422 XSA-303
- CVE-2018-12207 XSA-304
- CVE-2019-11135 XSA-305

ref #10968

--- a/main/xen/APKBUILD
+++ b/main/xen/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: 
 pkgname=xen
 pkgver=4.12.1
-pkgrel=0
+pkgrel=1
 pkgdesc="Xen hypervisor"
 url="https://www.xenproject.org/"
 arch="x86_64 armhf aarch64" # enable armv7 when builds with gcc8
@@ -146,6 +146,14 @@ options="!strip"
 #     - CVE-2019-11091  XSA-297
 #   4.12.1-r0:
 #     - CVE-????-?????  XSA-295
+#   4.12.1-r1:
+#     - CVE-2019-18425 XSA-298
+#     - CVE-2019-18421 XSA-299
+#     - CVE-2019-18423 XSA-301
+#     - CVE-2019-18424 XSA-302
+#     - CVE-2019-18422 XSA-303
+#     - CVE-2018-12207 XSA-304
+#     - CVE-2019-11135 XSA-305
 
 case "$CARCH" in
 x86*)
@@ -208,6 +216,33 @@ source="https://downloads.xenproject.org/release/$pkgname/$pkgver/$pkgname-$pkgv
 	xenqemu-xattr-size-max.patch
 
 	hotplug-Linux-iscsi-block-handle-lun-1.patch
+
+	xsa298.patch
+	xsa299-0001-x86-mm-L1TF-checks-don-t-leave-a-partial-entry.patch
+	xsa299-0002-x86-mm-Don-t-re-set-PGT_pinned-on-a-partially-de-val.patch
+	xsa299-0003-x86-mm-Separate-out-partial_pte-tristate-into-indivi.patch
+	xsa299-0004-x86-mm-Use-flags-for-_put_page_type-rather-than-a-bo.patch
+	xsa299-0005-x86-mm-Rework-get_page_and_type_from_mfn-conditional.patch
+	xsa299-0006-x86-mm-Have-alloc_l-23-_table-clear-partial_flags-wh.patch
+	xsa299-0007-x86-mm-Always-retain-a-general-ref-on-partial.patch
+	xsa299-0008-x86-mm-Collapse-PTF_partial_set-and-PTF_partial_gene.patch
+	xsa299-0009-x86-mm-Properly-handle-linear-pagetable-promotion-fa.patch
+	xsa299-0010-x86-mm-Fix-nested-de-validation-on-error.patch
+	xsa299-0011-x86-mm-Don-t-drop-a-type-ref-unless-you-held-a-ref-t.patch
+	xsa301-master-1.patch
+	xsa301-master-2.patch
+	xsa301-master-3.patch
+	xsa302-0001-IOMMU-add-missing-HVM-check.patch
+	xsa302-0002-passthrough-quarantine-PCI-devices.patch
+	xsa303-0001-xen-arm32-entry-Split-__DEFINE_ENTRY_TRAP-in-two.patch
+	xsa303-0002-xen-arm32-entry-Fold-the-macro-SAVE_ALL-in-the-macro.patch
+	xsa303-0003-xen-arm32-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+	xsa303-0004-xen-arm64-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+	xsa304-4.12-1.patch
+	xsa304-4.12-2.patch
+	xsa304-4.12-3.patch
+	xsa305-4.12-1.patch
+	xsa305-4.12-2.patch
 
 	xenstored.initd
 	xenstored.confd
@@ -462,6 +497,32 @@ f095ea373f36381491ad36f0662fb4f53665031973721256b23166e596318581da7cbb0146d0beb2
 e76816c6ad0e91dc5f81947f266da3429b20e6d976c3e8c41202c6179532eec878a3f0913921ef3ac853c5dbad8082da3c9cd53b65081910516feb492577b7fc  xen-fd-is-file.c
 2094ea964fa610b2bf72fd2c7ede7e954899a75c0f5b08030cf1d74460fb759ade84866176e32f8fe29c921dfdc6dafd2b31e23ab9b0a3874d3dceeabdd1913b  xenqemu-xattr-size-max.patch
 8c9cfc6afca325df1d8026e21ed03fa8cd2c7e1a21a56cc1968301c5ab634bfe849951899e75d328951d7a41273d1e49a2448edbadec0029ed410c43c0549812  hotplug-Linux-iscsi-block-handle-lun-1.patch
+f572cdf1bdf989c42e2bda7f617df1bc3f27a654d29a7d6dd35f37a5d2d3633152bf5675ef4e9a2ca4ec8d62d1aaca77559c1c49293c86d0b322138cfe4465a2  xsa298.patch
+492b1043593faf96595ed26e66ace8046027be9f5fb259052bac1ff932a595b5c1eec349f55da278d6824faf25a642fd254a7e0d43931fcbbf645db4e6cbf638  xsa299-0001-x86-mm-L1TF-checks-don-t-leave-a-partial-entry.patch
+30b57a78f89a4f3426926b9001f94c068391446f6b33a1761739192fd92406d32ab47a65492e9f9b9c62dff415816f19cc63a2d4e9028a813df528bda1f03db1  xsa299-0002-x86-mm-Don-t-re-set-PGT_pinned-on-a-partially-de-val.patch
+2cd394b07da9c6add588b4e28167b3316458470c502bc5294da5d418336733b1825252d8784065f436b16c5ee24ca795f8520f92d55352dddd4488cd3d573376  xsa299-0003-x86-mm-Separate-out-partial_pte-tristate-into-indivi.patch
+b53b246ea6436804ae6d2d2ca0346cd609725c101e66024a413afbc7c7ffd54dadf9156d508802ada147f1229f6f13e60a0dd86be0fc6db2229cbdcba74133a9  xsa299-0004-x86-mm-Use-flags-for-_put_page_type-rather-than-a-bo.patch
+060ee96c0b565ec8c0b6592b71791372e61f29eb0a7509afb6f3af5e2c72f26ed2e5e103541302d5737cf53c5c8ad5e306ac4184edca46c074d0cb714cd4b573  xsa299-0005-x86-mm-Rework-get_page_and_type_from_mfn-conditional.patch
+aa8b93ca612e4c8fe7621e41984b52cd22ccf87bf51437542e313147adce3a411ebaf7e258cd08d72db5e6fcc66bddfd99ca8fa3dae7fb2d2a37bd74f751b5b7  xsa299-0006-x86-mm-Have-alloc_l-23-_table-clear-partial_flags-wh.patch
+890feebc2e28410f36d73e5043f66f8c1794ee9ae8fc2863d4e9ad2ce61c6bf70dd576aab246f5d8957165d539f379edca42c980687c4e0d5cae8a84d2f46964  xsa299-0007-x86-mm-Always-retain-a-general-ref-on-partial.patch
+931db5d95a4f1d3111eef3721a12d047f1e5675f9ed7be77cb2266f9e949eb870413c3d3eb7ae4cf69d63ee43ed66d16d6b3169761728c573eb0ee89ffb70fc9  xsa299-0008-x86-mm-Collapse-PTF_partial_set-and-PTF_partial_gene.patch
+659fbb323bfce3c99135b25113f749d473e4b63b750bd27de1c4289f42fe5221696b7783608ccc3b88cf01b97d924683c6e0f18b052d1b76ed59749a8db975c5  xsa299-0009-x86-mm-Properly-handle-linear-pagetable-promotion-fa.patch
+67fdbf89c2e7f5de3b53e9b9b5feafaa2a5514846b527792e28bf5ebced62e8b947f77178b7f4f08ceabe992111548efcbad3610c3fc466e9c05654832e73090  xsa299-0010-x86-mm-Fix-nested-de-validation-on-error.patch
+dcd5d0a097aca6f90f795209b59a4e210da61e0de141399c5a9c5a1c7f8596618c59675b862fcbc1ac58a99d09c47f3575f096fa00babe33ad10024ccd4a910b  xsa299-0011-x86-mm-Don-t-drop-a-type-ref-unless-you-held-a-ref-t.patch
+9e1d8cb548e42e93b5f65bcb3d4249b1c5992adfce71ab74ea1e2982855229e7bb2328d18cf13602c7506a88391c35fa81542d44d83fe9b7bbeda2e3ca79868a  xsa301-master-1.patch
+0b6eada957a4fceb6ae0f4bda6f88723c32c6a20412e1247499e23561ad3fc9f85670f1c7513620281f05574a67d0e73fd310852eaa7e76a2a7e25a21d1ec573  xsa301-master-2.patch
+79adea5687cd30d8a43cf79a68e23a5036486aa84d5fd6516112975c239de35aa0583548cc8fc397f898dadc27070ddce4d47f32aa2aad2a32e731e53b004b90  xsa301-master-3.patch
+a79e7a5b1cbf61314186ad86916276f7c7bae6ef71cc90e9a87a24e9a9e6e287d3814067629b90492ed251081c11b34ebda7adaef3fca1f8630134bdd4ff6ee0  xsa302-0001-IOMMU-add-missing-HVM-check.patch
+ed30fd4fac339c05d2eab65985bb2ef00976634c9124036185ed4f2adc9db2d00fb7207c3001e50a4b59e6644631c1ddc5831c6b8ce57546f467b17d7993ed95  xsa302-0002-passthrough-quarantine-PCI-devices.patch
+b65de69f7c0097177652fc6fe7c0c12ab44c6bb0a8823b19ee315a574b04f9151a572d518d684fec467b995c9c9756bd5b2d88f7546199c0b807155c5dca43b5  xsa303-0001-xen-arm32-entry-Split-__DEFINE_ENTRY_TRAP-in-two.patch
+440869c1d7212820ba0c7d4b35681483897d1dcc4aa2f833af1370ac5bd8995b3d2712c598e6309488b90f37e36ca36db232e5de06242afa017d1c991f5d6af6  xsa303-0002-xen-arm32-entry-Fold-the-macro-SAVE_ALL-in-the-macro.patch
+7d56d0576fcd90ce4296e59cd2eae35929ecae6a7fa40e88c2f66f54234083b09be92630f299e5bb24d23b32949e58d49bafa1bed1e73719b73a4c640b86206f  xsa303-0003-xen-arm32-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+49b540f2585f43685c9f37ea1b6f166a98e71d85e6e0fbf2807b5788b3e71cb35dd71f71b7ad5a6d230ba60706cd11ef4bcecec7c2f250f28fd95dbd50fffc2b  xsa303-0004-xen-arm64-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+f2606da23340e717fa5ee9a6ca7e79dd6c1e2d35a6e4da63f96ba84743dac06bb97062a15ac999012d59b16798b1f2f3ecc61e36c187d31b97aa49ae88860531  xsa304-4.12-1.patch
+88e0ee8895967fbb88ac614b2db324c6e22289884a17615f381de5b73f3a8f6283b7f7a1c06937fe6ea2a35a525832b45ba94a59ae89a563b518c841e16b03b5  xsa304-4.12-2.patch
+6eae23eca491328c818163afe2fffc3aeca6c3c47fd56a21e4080f3f08bdb02bc8cdd6d17a985e8e073a49709969e5ea4d8c1f1935dd848b35885db41ef9595d  xsa304-4.12-3.patch
+e88f6074bdfbe5825e16edffaae6e9fa589460f5e2b06cce43a36014d6df2036e0c99ac5b2bb7c91366f2a0bff121a07908670f9c2ad37d1f9980f2e3b6bcbe5  xsa305-4.12-1.patch
+99a67661b791de5efab41dd56050243a65aa3c0fc91fd2cf7a087bc0112452c900b3d9d8b6727dd4dc609ce2f3655ec0bbc12df28ffd4f87c42b8701e271ce6f  xsa305-4.12-2.patch
 52c43beb2596d645934d0f909f2d21f7587b6898ed5e5e7046799a8ed6d58f7a09c5809e1634fa26152f3fd4f3e7cfa07da7076f01b4a20cc8f5df8b9cb77e50  xenstored.initd
 093f7fbd43faf0a16a226486a0776bade5dc1681d281c5946a3191c32d74f9699c6bf5d0ab8de9d1195a2461165d1660788e92a3156c9b3c7054d7b2d52d7ff0  xenstored.confd
 3c86ed48fbee0af4051c65c4a3893f131fa66e47bf083caf20c9b6aa4b63fdead8832f84a58d0e27964bc49ec8397251b34e5be5c212c139f556916dc8da9523  xenconsoled.initd
