main/xen: security fixes
- CVE-2019-18425 XSA-298
- CVE-2019-18421 XSA-299
- CVE-2019-18423 XSA-301
- CVE-2019-18424 XSA-302
- CVE-2019-18422 XSA-303
- CVE-2018-12207 XSA-304
- CVE-2019-11135 XSA-305

ref #10968

--- a/main/xen/APKBUILD
+++ b/main/xen/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: William Pitcock <nenolod@dereferenced.org>
 pkgname=xen
 pkgver=4.11.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Xen hypervisor"
 url="https://www.xenproject.org/"
 arch="x86_64 armhf aarch64" # enable armv7 when builds with gcc8
@@ -157,6 +157,14 @@ options="!strip"
 #     - CVE-????-?????  XSA-294
 #     - CVE-????-?????  XSA-295
 #     - CVE-????-?????  XSA-296
+#   4.11.2-r1:
+#     - CVE-2019-18425 XSA-298
+#     - CVE-2019-18421 XSA-299
+#     - CVE-2019-18423 XSA-301
+#     - CVE-2019-18424 XSA-302
+#     - CVE-2019-18422 XSA-303
+#     - CVE-2018-12207 XSA-304
+#     - CVE-2019-11135 XSA-305
 
 case "$CARCH" in
 x86*)
@@ -223,6 +231,33 @@ source="https://downloads.xenproject.org/release/$pkgname/$pkgver/$pkgname-$pkgv
 	xenqemu-xattr-size-max.patch
 
 	hotplug-Linux-iscsi-block-handle-lun-1.patch
+
+	xsa298-4.11.patch
+	xsa299-0001-x86-mm-L1TF-checks-don-t-leave-a-partial-entry.patch
+	xsa299-0002-x86-mm-Don-t-re-set-PGT_pinned-on-a-partially-de-val.patch
+	xsa299-0003-x86-mm-Separate-out-partial_pte-tristate-into-indivi.patch
+	xsa299-0004-x86-mm-Use-flags-for-_put_page_type-rather-than-a-bo.patch
+	xsa299-0005-x86-mm-Rework-get_page_and_type_from_mfn-conditional.patch
+	xsa299-0006-x86-mm-Have-alloc_l-23-_table-clear-partial_flags-wh.patch
+	xsa299-0007-x86-mm-Always-retain-a-general-ref-on-partial.patch
+	xsa299-0008-x86-mm-Collapse-PTF_partial_set-and-PTF_partial_gene.patch
+	xsa299-0009-x86-mm-Properly-handle-linear-pagetable-promotion-fa.patch
+	xsa299-0010-x86-mm-Fix-nested-de-validation-on-error.patch
+	xsa299-0011-x86-mm-Don-t-drop-a-type-ref-unless-you-held-a-ref-t.patch
+	xsa301-4.11-1.patch
+	xsa301-4.11-2.patch
+	xsa301-4.11-3.patch
+	xsa302-0001-IOMMU-add-missing-HVM-check.patch
+	xsa302-0002-passthrough-quarantine-PCI-devices.patch
+	xsa303-0001-xen-arm32-entry-Split-__DEFINE_ENTRY_TRAP-in-two.patch
+	xsa303-0002-xen-arm32-entry-Fold-the-macro-SAVE_ALL-in-the-macro.patch
+	xsa303-0003-xen-arm32-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+	xsa303-0004-xen-arm64-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+	xsa304-4.11-1.patch
+	xsa304-4.11-2.patch
+	xsa304-4.11-3.patch
+	xsa305-4.11-1.patch
+	xsa305-4.11-2.patch
 
 	xenstored.initd
 	xenstored.confd
@@ -480,6 +515,32 @@ e76816c6ad0e91dc5f81947f266da3429b20e6d976c3e8c41202c6179532eec878a3f0913921ef3a
 69dfa60628ca838678862383528654ecbdf4269cbb5c9cfb6b84d976202a8dea85d711aa65a52fa1b477fb0b30604ca70cf1337192d6fb9388a08bbe7fe56077  xenstore_client_transaction_fix.patch
 2094ea964fa610b2bf72fd2c7ede7e954899a75c0f5b08030cf1d74460fb759ade84866176e32f8fe29c921dfdc6dafd2b31e23ab9b0a3874d3dceeabdd1913b  xenqemu-xattr-size-max.patch
 8c9cfc6afca325df1d8026e21ed03fa8cd2c7e1a21a56cc1968301c5ab634bfe849951899e75d328951d7a41273d1e49a2448edbadec0029ed410c43c0549812  hotplug-Linux-iscsi-block-handle-lun-1.patch
+a4e1a0c080c51dad386b0c276eb1b9a5fc2acbca5886e1c390325cbe81102a2f5c570e7d4e9c18a8214036e80504ada0216a19e0f63a69926558fae7680d765b  xsa298-4.11.patch
+12b1dd1c320c0fbf5cc651e018b7051875d826014c993f04a0002ed9658d84969e413e2baaaeb8fc42d57dc0ae4b904bcb8baa75a38bff43484b94790a34eb92  xsa299-0001-x86-mm-L1TF-checks-don-t-leave-a-partial-entry.patch
+19385d9e713b806c237d7505b8a5e9bb5b286d3cf0f0a452a2638735e4204a8eeb14a66f761e78f6ed00098e1e773d865e0aa2c388620961f83aac9d149d8e2c  xsa299-0002-x86-mm-Don-t-re-set-PGT_pinned-on-a-partially-de-val.patch
+9652e3c20448bbb1a13e801b451c13077699e32626f544ec125fd5cb6f06fae7ed0308a950ec1783f7d91fc2d101133bbcf5a3545fec5aa9575e7e38078a176e  xsa299-0003-x86-mm-Separate-out-partial_pte-tristate-into-indivi.patch
+22adf9c5fd4a2a85ccaeb0552a67aabab97259f8419b62082922fcadb41c754cf70bbd9d1746589074f601b820290eb6f0ca7eda4d512dceaabff71d86ea1ad3  xsa299-0004-x86-mm-Use-flags-for-_put_page_type-rather-than-a-bo.patch
+2b58855bcd5fa8c15c99a5e3e5ab57c8a1053ff5f5b6fa75d3352c913af56dc9f12e85bd0bee3b79ff1d808f7f893b3c3a5bc2c5edd1539a5d6e1a9faa1053d9  xsa299-0005-x86-mm-Rework-get_page_and_type_from_mfn-conditional.patch
+776898c266bdd3c2c20947ae048a5c83cc78ae719407d55037f396fea6c52339c5c8859adaa8626fe9c70498a11ae0becc33e12dd92684492b7d37fd0846d0a0  xsa299-0006-x86-mm-Have-alloc_l-23-_table-clear-partial_flags-wh.patch
+f2feef23419530e059cdddf4e76990183b365171647dba89a2b7f59c7c7a084da21f3ea834148b0b3d328dbec3d960023ca4f807094bb746ca3be3b0e4098aae  xsa299-0007-x86-mm-Always-retain-a-general-ref-on-partial.patch
+856cd9bb37c1253423f1d117fa2421e2296a08f0b7716c39cff8db0959f94f90588ab978611b670b630ccc7b6776325afc366460d899c9932d881a25526c813b  xsa299-0008-x86-mm-Collapse-PTF_partial_set-and-PTF_partial_gene.patch
+fa9b497941a063fc378849f9a93f1a1500c05299fade739a322d2686041542f1a2d54e46c979b9a5bae342e8eba6226c606d38cb5ad52787c5f541890d2906b6  xsa299-0009-x86-mm-Properly-handle-linear-pagetable-promotion-fa.patch
+b6af837ba78964605a8640cffcf2295c0d92df621864bfc4f7999aee0c8c68e502d6e4ffe98bcba77216090335ed40f6ae4bfe506221373d35139905cd94288a  xsa299-0010-x86-mm-Fix-nested-de-validation-on-error.patch
+4c7458f90f31c4755e5dd3b4c01f2d72f8a8fdc94822e1d70a03b28b769461c1be4098ceeb91c66e69211d74034bf955ac29a60c008f870c52228de258ee285c  xsa299-0011-x86-mm-Don-t-drop-a-type-ref-unless-you-held-a-ref-t.patch
+916dc53eddb225a5c118630553baaa784c14a2a2ddc1f031ea83dbbb0241f0b103e664d3429414236951f6de689ff234be3fb900b83d1e1a4a4227385b32d496  xsa301-4.11-1.patch
+555d6586543f4b8661d1104851073277290ccce17d05279531c685966186948f933706d834ac1dd748678340df0aaa0423d18ea88be9a35bec67685aeb6258ac  xsa301-4.11-2.patch
+5cf43aeb65988b7395a2d87bef0587cc172456ebebc2b9b67c231802ebcfb6bc1bdccccaaa09be463f1a79158234cb4003c0cd478990b99f020d812b90acc011  xsa301-4.11-3.patch
+c44b8b5b6d64bed624fa045efa88a3d34af1c14d3186fe9ef316eee288ea9ebb0d55414fb612d3873f9a6d76bd316176d68e284d4fdc1b59205c6b5ebd03365e  xsa302-0001-IOMMU-add-missing-HVM-check.patch
+997c45c485cd382d9d3919cdedf4c9c50a579e21a98503408a2f9854437c8af6e7eafb83639261e1fdd8c4438fb1ff8ea196cfde00e8db82f26244086be31537  xsa302-0002-passthrough-quarantine-PCI-devices.patch
+b65de69f7c0097177652fc6fe7c0c12ab44c6bb0a8823b19ee315a574b04f9151a572d518d684fec467b995c9c9756bd5b2d88f7546199c0b807155c5dca43b5  xsa303-0001-xen-arm32-entry-Split-__DEFINE_ENTRY_TRAP-in-two.patch
+440869c1d7212820ba0c7d4b35681483897d1dcc4aa2f833af1370ac5bd8995b3d2712c598e6309488b90f37e36ca36db232e5de06242afa017d1c991f5d6af6  xsa303-0002-xen-arm32-entry-Fold-the-macro-SAVE_ALL-in-the-macro.patch
+7d56d0576fcd90ce4296e59cd2eae35929ecae6a7fa40e88c2f66f54234083b09be92630f299e5bb24d23b32949e58d49bafa1bed1e73719b73a4c640b86206f  xsa303-0003-xen-arm32-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+49b540f2585f43685c9f37ea1b6f166a98e71d85e6e0fbf2807b5788b3e71cb35dd71f71b7ad5a6d230ba60706cd11ef4bcecec7c2f250f28fd95dbd50fffc2b  xsa303-0004-xen-arm64-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+35a047ba201c5ef718a961e4bd6f5a9760e736ee9d28a87e2de91fa2475d1883c2acb71817c4bcd1bb582ef986c2defd230030783a56dda3e9125d66189d5898  xsa304-4.11-1.patch
+947d016de1356782ed9f44ce30649c3a1898a230d492ef17a8d1724686ac93e069fb15a8110ea7fe4fe34ce409f067d3558e53a8ae7ba988c2c6390cccff04c3  xsa304-4.11-2.patch
+cd5d1967a38e74555465f71eb99501ef0c39d4a22e4e2f737b7a478e414caf5992b2a7d8257d68e6c8f48f260742931df22ff5dbc4d4cc35eb2d8075d1c0798b  xsa304-4.11-3.patch
+9b7730142f63d87d962b1ec148a440a0da3d331053df34c92d535084e3044adc4cb7f1004e9a7028c9cce8f11150714d86f03f067ab2a631a15ef0eca8300581  xsa305-4.11-1.patch
+58a73ae86b37d59aad469cdadd8d325f6daa91d0af068ea27f022cfcfa6770c52a29a12a15867a5e95d5e2e23a8ee442070dac6e0b4d5b389543c8769de63f12  xsa305-4.11-2.patch
 52c43beb2596d645934d0f909f2d21f7587b6898ed5e5e7046799a8ed6d58f7a09c5809e1634fa26152f3fd4f3e7cfa07da7076f01b4a20cc8f5df8b9cb77e50  xenstored.initd
 093f7fbd43faf0a16a226486a0776bade5dc1681d281c5946a3191c32d74f9699c6bf5d0ab8de9d1195a2461165d1660788e92a3156c9b3c7054d7b2d52d7ff0  xenstored.confd
 3c86ed48fbee0af4051c65c4a3893f131fa66e47bf083caf20c9b6aa4b63fdead8832f84a58d0e27964bc49ec8397251b34e5be5c212c139f556916dc8da9523  xenconsoled.initd
