main/xen: security fixes
- CVE-2019-18425 XSA-298
- CVE-2019-18421 XSA-299
- CVE-2019-18423 XSA-301
- CVE-2019-18424 XSA-302
- CVE-2019-18422 XSA-303
- CVE-2018-12207 XSA-304
- CVE-2019-11135 XSA-305

fixes #10968

--- a/main/xen/APKBUILD
+++ b/main/xen/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: William Pitcock <nenolod@dereferenced.org>
 pkgname=xen
 pkgver=4.10.4
-pkgrel=0
+pkgrel=1
 pkgdesc="Xen hypervisor"
 url="http://www.xen.org/"
 arch="x86_64 armhf aarch64"
@@ -154,6 +154,14 @@ options="!strip"
 #     - XSA-294
 #     - XSA-295
 #     - XSA-296
+#   4.10.4-r1:
+#     - CVE-2019-18425 XSA-298
+#     - CVE-2019-18421 XSA-299
+#     - CVE-2019-18423 XSA-301
+#     - CVE-2019-18424 XSA-302
+#     - CVE-2019-18422 XSA-303
+#     - CVE-2018-12207 XSA-304
+#     - CVE-2019-11135 XSA-305
 
 case "$CARCH" in
 x86*)
@@ -217,6 +225,33 @@ source="https://downloads.xenproject.org/release/$pkgname/$pkgver/$pkgname-$pkgv
 	xenqemu-xattr-size-max.patch
 
 	hotplug-Linux-iscsi-block-handle-lun-1.patch
+
+	xsa298-4.10.patch
+	xsa299-0001-x86-mm-L1TF-checks-don-t-leave-a-partial-entry.patch
+	xsa299-0002-x86-mm-Don-t-re-set-PGT_pinned-on-a-partially-de-val.patch
+	xsa299-0003-x86-mm-Separate-out-partial_pte-tristate-into-indivi.patch
+	xsa299-0004-x86-mm-Use-flags-for-_put_page_type-rather-than-a-bo.patch
+	xsa299-0005-x86-mm-Rework-get_page_and_type_from_mfn-conditional.patch
+	xsa299-0006-x86-mm-Have-alloc_l-23-_table-clear-partial_flags-wh.patch
+	xsa299-0007-x86-mm-Always-retain-a-general-ref-on-partial.patch
+	xsa299-0008-x86-mm-Collapse-PTF_partial_set-and-PTF_partial_gene.patch
+	xsa299-0009-x86-mm-Properly-handle-linear-pagetable-promotion-fa.patch
+	xsa299-0010-x86-mm-Fix-nested-de-validation-on-error.patch
+	xsa299-0011-x86-mm-Don-t-drop-a-type-ref-unless-you-held-a-ref-t.patch
+	xsa301-4.11-1.patch
+	xsa301-4.11-2.patch
+	xsa301-4.11-3.patch
+	xsa302-0001-IOMMU-add-missing-HVM-check.patch
+	xsa302-0002-passthrough-quarantine-PCI-devices.patch
+	xsa303-0001-xen-arm32-entry-Split-__DEFINE_ENTRY_TRAP-in-two.patch
+	xsa303-0002-xen-arm32-entry-Fold-the-macro-SAVE_ALL-in-the-macro.patch
+	xsa303-0003-xen-arm32-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+	xsa303-0004-xen-arm64-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+	xsa304-4.10-1.patch
+	xsa304-4.10-2.patch
+	xsa304-4.10-3.patch
+	xsa305-4.10-1.patch
+	xsa305-4.10-2.patch
 
 	xenstored.initd
 	xenstored.confd
@@ -471,6 +506,32 @@ e76816c6ad0e91dc5f81947f266da3429b20e6d976c3e8c41202c6179532eec878a3f0913921ef3a
 69dfa60628ca838678862383528654ecbdf4269cbb5c9cfb6b84d976202a8dea85d711aa65a52fa1b477fb0b30604ca70cf1337192d6fb9388a08bbe7fe56077  xenstore_client_transaction_fix.patch
 2094ea964fa610b2bf72fd2c7ede7e954899a75c0f5b08030cf1d74460fb759ade84866176e32f8fe29c921dfdc6dafd2b31e23ab9b0a3874d3dceeabdd1913b  xenqemu-xattr-size-max.patch
 8c9cfc6afca325df1d8026e21ed03fa8cd2c7e1a21a56cc1968301c5ab634bfe849951899e75d328951d7a41273d1e49a2448edbadec0029ed410c43c0549812  hotplug-Linux-iscsi-block-handle-lun-1.patch
+c81ce3b1f14731061af530861f628e1fd392211f98c4aba9db8354e7aff604902908733ec716d46f679e65e068717dc87694797480f490046701c4e2aecc3a51  xsa298-4.10.patch
+eaeba22b8582a5f7cac727d0c068236a6af375b8b9f9e57d69d97569a6e1b7da15c38b611bc2504a84e044a6cafabc1fed27a134547c629210ebc66750fbce9f  xsa299-0001-x86-mm-L1TF-checks-don-t-leave-a-partial-entry.patch
+a027beb481e58b575967212381fd98e992eb28c1e6cd9a207c7c3f22e9aa6f65ca94b73cd02f460fdb2c931c527300bc2bd6dee9f039d1ace3532069ab9fb42d  xsa299-0002-x86-mm-Don-t-re-set-PGT_pinned-on-a-partially-de-val.patch
+6a48835ad80ba6d8c97d09e74303d8c430e1f8a1245bdd4ea9b9301d4d35a5bbb388ef694d8ca9bbf872521123c40ac8f8142e59c2b13efd932948083d98b09f  xsa299-0003-x86-mm-Separate-out-partial_pte-tristate-into-indivi.patch
+a9774b3bece635bb86501f67718cdeeeadfb32c465ef11a41a0f9869b42f879a82c73753c198b5285bb29e8df6531f6467619c4b29b583e0a761f45c2419b521  xsa299-0004-x86-mm-Use-flags-for-_put_page_type-rather-than-a-bo.patch
+d25dd31942d676c4b4f9db593b1a520ef8e3feaf50dd79313860eb5afd5e41503caca937d5bd0fbc57a02f9d85d52fea3646e0bb1580ff4971c6d194f872b9d1  xsa299-0005-x86-mm-Rework-get_page_and_type_from_mfn-conditional.patch
+695a3ea0a0c2965e88cf907719aa2ace509d1f4944793eabbe3ace44d94f4f6b8e685695cf668c129d205b6b1ef30f37c13acb736bdf7de3b44c1b60d05c22be  xsa299-0006-x86-mm-Have-alloc_l-23-_table-clear-partial_flags-wh.patch
+8bd1fb05bed70aacdebf31755e673c74700d6f5ee1a15a35d950e90d5c34f16b3d0531b56ae74f17203cf87579d2b157c049efea040a2a03c7d0e8adce8498b9  xsa299-0007-x86-mm-Always-retain-a-general-ref-on-partial.patch
+45bf263b11abd75e2fa2ee9e757c13de0a99365861d900b82cad0302446762a0ae76b9efbd870887d6353dcf95d565987debf43f80be4c9a0950c88964a3ee6a  xsa299-0008-x86-mm-Collapse-PTF_partial_set-and-PTF_partial_gene.patch
+35faf5434ebf4c6166d7f8fd10f9010e3dc8a714d5b9e168f641d420e070222c172060a7a72b8c81b93aa762b1d5286098713b485f86c1f1a679c5c588dd642f  xsa299-0009-x86-mm-Properly-handle-linear-pagetable-promotion-fa.patch
+8512e19397e30b4cca367b1fb936ef615ed5d4656206d16b24d0f44539a6ec5af07d0021a6276b48592a68b0fb7c5d3a3f035c9b3a1b7bfaa82f70204096a745  xsa299-0010-x86-mm-Fix-nested-de-validation-on-error.patch
+81813683d7d83610296c7dfb2f75be7ccf1e332d9abc8fcf741906ddbcaa5b38511a1047c233e34e21437737be2fc343b027f4f73133c4ab823ff879842a5002  xsa299-0011-x86-mm-Don-t-drop-a-type-ref-unless-you-held-a-ref-t.patch
+916dc53eddb225a5c118630553baaa784c14a2a2ddc1f031ea83dbbb0241f0b103e664d3429414236951f6de689ff234be3fb900b83d1e1a4a4227385b32d496  xsa301-4.11-1.patch
+555d6586543f4b8661d1104851073277290ccce17d05279531c685966186948f933706d834ac1dd748678340df0aaa0423d18ea88be9a35bec67685aeb6258ac  xsa301-4.11-2.patch
+5cf43aeb65988b7395a2d87bef0587cc172456ebebc2b9b67c231802ebcfb6bc1bdccccaaa09be463f1a79158234cb4003c0cd478990b99f020d812b90acc011  xsa301-4.11-3.patch
+6e918e7e6488d89807df5ff5c73926eb6c2990893c25850c5a55d2944619c6e135855ec57a5f54379c809e1ec854a4b56d1acd1c2bc0b50a06d183b470167d0f  xsa302-0001-IOMMU-add-missing-HVM-check.patch
+cda95d99b8a51175b1ca98318ae4488a7b82f43c1e7a4e9903d8f5f9277c08acb759d05f146b8363363f9f1ed45663190fb935726c43fe667301134b88b21692  xsa302-0002-passthrough-quarantine-PCI-devices.patch
+b65de69f7c0097177652fc6fe7c0c12ab44c6bb0a8823b19ee315a574b04f9151a572d518d684fec467b995c9c9756bd5b2d88f7546199c0b807155c5dca43b5  xsa303-0001-xen-arm32-entry-Split-__DEFINE_ENTRY_TRAP-in-two.patch
+440869c1d7212820ba0c7d4b35681483897d1dcc4aa2f833af1370ac5bd8995b3d2712c598e6309488b90f37e36ca36db232e5de06242afa017d1c991f5d6af6  xsa303-0002-xen-arm32-entry-Fold-the-macro-SAVE_ALL-in-the-macro.patch
+7d56d0576fcd90ce4296e59cd2eae35929ecae6a7fa40e88c2f66f54234083b09be92630f299e5bb24d23b32949e58d49bafa1bed1e73719b73a4c640b86206f  xsa303-0003-xen-arm32-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+49b540f2585f43685c9f37ea1b6f166a98e71d85e6e0fbf2807b5788b3e71cb35dd71f71b7ad5a6d230ba60706cd11ef4bcecec7c2f250f28fd95dbd50fffc2b  xsa303-0004-xen-arm64-Don-t-blindly-unmask-interrupts-on-trap-wi.patch
+8502fd41000664f74382e2691f0a7ceef5121227532a55ffef3046745fe05461b266c93191f505ce3566b2e932b2f0880510dff714948384215fc48093b8d983  xsa304-4.10-1.patch
+c0149a445a9f6ef4aa0d928ff321afa7ea6f52d96213042f444a9b96912729fa27c5b81c247c56f45922061f2e45649c8ab462d73765de8ca49022b9994ccf05  xsa304-4.10-2.patch
+f7c34c984885f73f51fd3ca0274b7a6b3ca938547b910bb1becc73d7df668b0f9f69d6f402cc3a183a2acff1a9978c2d5775bd2acced4300212568e8ca22d47a  xsa304-4.10-3.patch
+eeca8ad1ec1b13b7d1849b94537d24e8f91eff6fb7b2e406a08accb9ec72ddb48360c90b2a250ffbc628970f00de557fcddacbcf09062a59a36a8b6ffcbf1909  xsa305-4.10-1.patch
+6fc52805ef24510aa5092d1bda61d1299b74c8b37fdca0c17e9df62ec16bb9c7343f09b8dd1f4801c4c5db3b3f6f7208c0c35034ef8aa86b08df308e82597892  xsa305-4.10-2.patch
 52c43beb2596d645934d0f909f2d21f7587b6898ed5e5e7046799a8ed6d58f7a09c5809e1634fa26152f3fd4f3e7cfa07da7076f01b4a20cc8f5df8b9cb77e50  xenstored.initd
 093f7fbd43faf0a16a226486a0776bade5dc1681d281c5946a3191c32d74f9699c6bf5d0ab8de9d1195a2461165d1660788e92a3156c9b3c7054d7b2d52d7ff0  xenstored.confd
 3c86ed48fbee0af4051c65c4a3893f131fa66e47bf083caf20c9b6aa4b63fdead8832f84a58d0e27964bc49ec8397251b34e5be5c212c139f556916dc8da9523  xenconsoled.initd
