main/hunspell: fix CVE-2019-16707
fixes #11101

--- a/main/hunspell/APKBUILD
+++ b/main/hunspell/APKBUILD
@@ -1,14 +1,20 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=hunspell
 pkgver=1.7.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Spell checker and morphological analyzer library and program"
 url="https://hunspell.github.io/"
 arch="all"
 license="GPL-2.0-or-later LGPL-2.0-or-later MPL-1.1"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-lang lib$pkgname:libs"
 makedepends="gettext-dev ncurses-dev readline-dev autoconf automake libtool"
-source="$pkgname-$pkgver.tar.gz::https://github.com/hunspell/hunspell/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/hunspell/hunspell/archive/v$pkgver.tar.gz
+	CVE-2019-16707.patch
+	"
+
+# secfixes:
+#   1.7.0-r1:
+#     - CVE-2019-16707
 
 prepare() {
 	cd "$builddir"
@@ -39,4 +45,5 @@ package() {
 	make -j1 DESTDIR="$pkgdir" install
 }
 
-sha512sums="8149b2e8b703a0610c9ca5160c2dfad3cf3b85b16b3f0f5cfcb7ebb802473b2d499e8e2d0a637a97a37a24d62424e82d3880809210d3f043fa17a4970d47c903  hunspell-1.7.0.tar.gz"
+sha512sums="8149b2e8b703a0610c9ca5160c2dfad3cf3b85b16b3f0f5cfcb7ebb802473b2d499e8e2d0a637a97a37a24d62424e82d3880809210d3f043fa17a4970d47c903  hunspell-1.7.0.tar.gz
+e7674819a9da4c3d742d34338d68d137d8613f97be2d25bf20db5219d4dd626f59a63ed4757b92f34307f499f2d687014065cdea97b55c98db295a8290300d2d  CVE-2019-16707.patch"
